# ai-agent-core-microservice-prot

./: .gitignore  DEPLOYMENT_REPORT.md  README.md  agentcore_migration_presentation.md  amplify.yml
backend/: Dockerfile  README.md  ag_ui_entrypoint.py  agent.py  buildspec.yml  pyproject.toml  requirements.txt
backend/src/: __init__.py
backend/src/application/: __init__.py
backend/src/application/commands/: __init__.py  submit_question.py  submit_question_with_memory.py
backend/src/application/queries/: __init__.py  get_conversation.py
backend/src/application/services/: __init__.py  pattern_applicator.py
backend/src/domain/: __init__.py
backend/src/domain/agent/: __init__.py
backend/src/domain/shared/: __init__.py  domain_event.py  entity.py  value_object.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/agentcore/: __init__.py  episodic_memory.py  memory_client.py  memory_config.py  reflection_service.py  session_memory.py  tenant_memory.py
backend/src/infrastructure/config/: __init__.py  di_container.py  settings.py
backend/src/infrastructure/external_services/: __init__.py
backend/src/infrastructure/observability/: __init__.py  metrics.py  tracer.py
backend/src/infrastructure/persistence/: __init__.py
backend/src/presentation/: __init__.py
backend/src/presentation/entrypoint/: __init__.py  agent_factory.py  prompts.py
backend/src/presentation/lambda_handlers/: __init__.py  chat_handler.py
backend/src/presentation/tools/: __init__.py  knowledge_generator_tool.py  knowledge_tool.py
backend/tests/: __init__.py  conftest.py
backend/tests/application/: test_submit_question.py
backend/tests/application/services/: test_pattern_applicator.py
backend/tests/domain/: test_agent.py
backend/tests/infrastructure/agentcore/: __init__.py  test_episodic_memory.py  test_memory_client.py  test_reflection_service.py  test_session_memory.py  test_tenant_memory.py
backend/tests/infrastructure/observability/: test_metrics.py  test_tracer.py
backend/tests/integration/: test_knowledge_generator_aws.py
backend/tests/presentation/entrypoint/: __init__.py  test_agent_factory.py
backend/tests/presentation/tools/: test_knowledge_tool.py
(+147 files in other folders)
